crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_list_item_fenced_div_marker_line_unclosed_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 97
expression: cst_output
---
DOCUMENT@0..32
  LIST@0..32
    LIST_ITEM@0..32
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      FENCED_DIV@2..32
        DIV_FENCE_OPEN@2..11
          TEXT@2..5 ":::"
          WHITESPACE@5..6 " "
          DIV_INFO@6..10
            TEXT@6..10 "note"
          NEWLINE@10..11 "\n"
        PARAGRAPH@11..32
          WHITESPACE@11..13 "  "
          TEXT@13..31 "body without close"
          NEWLINE@31..32 "\n"
