crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_list_item_html_div_multiline_para_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..24
  LIST@0..24
    LIST_ITEM@0..24
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      PLAIN@2..15
        INLINE_HTML@2..7
          INLINE_HTML_CONTENT@2..7 "<div>"
        NEWLINE@7..8 "\n"
        TEXT@8..14 "  body"
        NEWLINE@14..15 "\n"
      HTML_BLOCK@15..24
        HTML_BLOCK_TAG@15..24
          TEXT@15..23 "  </div>"
          NEWLINE@23..24 "\n"
