crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_list_item_indented_code.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..17
  LIST@0..17
    LIST_ITEM@0..17
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      PLAIN@2..6
        TEXT@2..5 "foo"
        NEWLINE@5..6 "\n"
      BLANK_LINE@6..7
        BLANK_LINE@6..7 "\n"
      CODE_BLOCK@7..17
        CODE_CONTENT@7..17
          WHITESPACE@7..13 "      "
          TEXT@13..16 "bar"
          NEWLINE@16..17 "\n"
